--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="wrapper">
         <header class="header"></header>
-        <main class="main"></main>
+        <main class="main">
+            <p>Test p-tag</p>
+        </main>
         <footer class="footer"></footer>
     </div>
 
