--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
     <div class="wrapper">
         <header class="header"></header>
         <main class="main">
-            <p>Test p-tag</p>
+            <ul>
+                <li><span class="fz-bold">git log</span> — история коммитов.</li>
+                <li><span class="fz-bold">git status</span> — измененные файлы (показывает добавлены в коммит
+                    или нет).</li>
+                <li><span class="fz-bold">git add file</span> — добавить файл в коммит.</li>
+                <li><span class="fz-bold">git add .</span> — добавить все изменённые файлы в коммит.</li>
+                <li><span class="fz-bold">git commit — m ‘text’</span> - добавить подпись коммитов.</li>
+                <li><span class="fz-bold">git commit --amend</span> — изменения сообщение последнего коммита.
+                </li>
+                <li><span class="fz-bold">git branch</span> — посмотреть ветки.</li>
+                <li><span class="fz-bold">git branch -v</span> — просмотр веток с последним в ней коммитом</li>
+                <li><span class="fz-bold">git branch -d название ветки</span> — удалить ветку.</li>
+                <li><span class="fz-bold">git checkout название ветки</span> — переключиться в ветку.</li>
+                <li><span class="fz-bold">git checkout -b название ветки</span> — создать новую ветку и сразу в
+                    неё переключиться.</li>
+                <li><span class="fz-bold">git push сервер ветка</span> – залить изменения на сервер в указанную
+                    ветку.</li>
+                <li><span class="fz-bold">git push -f</span> — залить изменения на сервер в режиме force, то
+                    есть с возможностью переписать уже
+                    имеющиеся коммиты на сервере. Будьте очень аккуратны с этой командой, а лучше минимизируйте её
+                    использование, ведь вы будете переписывать серверные файлы.</li>
+            </ul>
         </main>
         <footer class="footer"></footer>
     </div>
