Commit before merge

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone = no">
     <link rel="shortcut icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <title>portfolio</title>
@@ -14,28 +15,7 @@
     <div class="wrapper">
         <header class="header"></header>
         <main class="main">
-            <ul>
-                <li><span class="fw-bold">git log</span> — история коммитов.</li>
-                <li><span class="fw-bold">git status</span> — измененные файлы (показывает добавлены в коммит
-                    или нет).</li>
-                <li><span class="fw-bold">git add file</span> — добавить файл в коммит.</li>
-                <li><span class="fw-bold">git add .</span> — добавить все изменённые файлы в коммит.</li>
-                <li><span class="fw-bold">git commit — m ‘text’</span> - добавить подпись коммитов.</li>
-                <li><span class="fw-bold">git commit --amend</span> — изменения сообщение последнего коммита.
-                </li>
-                <li><span class="fw-bold">git branch</span> — посмотреть ветки.</li>
-                <li><span class="fw-bold">git branch -v</span> — просмотр веток с последним в ней коммитом</li>
-                <li><span class="fw-bold">git branch -d название ветки</span> — удалить ветку.</li>
-                <li><span class="fw-bold">git checkout название ветки</span> — переключиться в ветку.</li>
-                <li><span class="fw-bold">git checkout -b название ветки</span> — создать новую ветку и сразу в
-                    неё переключиться.</li>
-                <li><span class="fw-bold">git push сервер ветка</span> – залить изменения на сервер в указанную
-                    ветку.</li>
-                <li><span class="fw-bold">git push -f</span> — залить изменения на сервер в режиме force, то
-                    есть с возможностью переписать уже
-                    имеющиеся коммиты на сервере. Будьте очень аккуратны с этой командой, а лучше минимизируйте её
-                    использование, ведь вы будете переписывать серверные файлы.</li>
-            </ul>
+
         </main>
         <footer class="footer"></footer>
     </div>
